# timeseries-docker-ray

./: .gitignore  .pre-commit-config.yaml  README.md
project/: .dockerignore  Dockerfile  pyproject.toml
project/app/: main.py
project/app/ml/: train.py  utils.py
project/data/: data_preparation.py
project/ml/: train.py
project/tests/: test_data_preparation.py
project/tests/test_ml/: test_utils.py
